--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fluent_ui: ^4.5.0
   firebase_auth: ^4.4.2
   fluttertoast: ^8.2.1
+  flutter_spinkit: ^5.2.0
+  devtools: ^2.9.4
 
 dev_dependencies:
   flutter_test:
